# icp-grader-be

./: Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml
examples/: quick_dev.rs
src/: config.rs  ctx.rs  error.rs  main.rs
src/schema/: assessment.rs  grade.rs  group.rs  mod.rs  student.rs  subject.rs  submission.rs  teacher.rs  user.rs  utils.rs
src/web/: assessment.rs  auth.rs  grade.rs  group.rs  middleware.rs  mod.rs  student.rs  subject.rs  submission.rs  teacher.rs
