[package]
name = "icp-grader-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- async
tokio = { version = "1", features = ["full"] }

# -- database
mongodb = { version = "2.8" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"

# -- web
axum = { version = "0.7" }

[dev-dependencies]
httpc-test = "0.1"
