[package]
name = "icp-grader-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- async
tokio = { version = "1", features = ["full"] }

# -- database
mongodb = { version = "2.8" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"

# -- web
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }

# -- web authentication
oauth2 = { version = "4.4" }
tower-cookies = { version = "0.10" }
async-trait = { version = "0.1" }
jsonwebtoken = { version = "9" }

[dev-dependencies]
httpc-test = "0.1"
